--- a/package.json
+++ b/package.json
@@ -5,14 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@theme-ui/preset-base": "^0.16.1",
     "gatsby": "^5.12.1",
     "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-layout": "^4.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-plugin-theme-ui": "^0.16.1",
+    "gatsby-remark-images": "^7.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "gatsby-transformer-remark": "^6.8.0",
+    "framer-motion": "^10.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "theme-ui": "^0.16.1",
+    "react-icons": "^4.8.0"
+
+    
   },
   "devDependencies": {
     "prettier": "^2.8.8"
