--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-layout": "^4.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-plugin-theme-ui": "^0.16.1",
