--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-plugin-theme-ui": "^0.16.1",
+    "gatsby-plugin-webfonts": "^2.3.2",
     "gatsby-remark-images": "^7.12.0",
+    "gatsby-source-contentful": "^8.13.2",
     "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-json": "^5.13.1",
     "gatsby-transformer-remark": "^6.8.0",
-    "gatsby-transformer-sharp": "^5.12.0",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
