--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Gilbert Haro",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.22.10",
+    "@parcel/watcher": "^2.4.1",
     "@theme-ui/preset-base": "^0.16.1",
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^10.10.0",
@@ -57,6 +58,6 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "engines": {
-  "node": "18.x"
+    "node": "18.x"
   }
 }
