Refined SEO strategy, dynamic URLs, and folder structure using Atomic Design principles.

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,8 +1,8 @@
 {
   "siteTitle": "Hola",
-  "siteTitleTwo": "I'm Gilbert",
+  "siteTitleTwo": "I'm Gilberto",
   "siteDescription": "Surfing the world wide web for all front end dev insight",
-  "author": "Gilberto A Haro",
+  "author": "Gilberto Alejandro Haro",
   "hero": {
     "image": "https://example.com/hero-image.jpg",
     "altText": "A visual representation of front-end development",
