--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-plugin-theme-ui": "^0.16.1",
+    "gatsby-plugin-typescript": "^5.13.1",
     "gatsby-plugin-webfonts": "^2.3.2",
     "gatsby-remark-images": "^7.12.0",
     "gatsby-source-contentful": "^8.13.2",
@@ -36,7 +37,16 @@
     "theme-ui": "^0.16.1"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
+    "@types/styled-components": "^5.1.34",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3"
   },
   "keywords": [
     "gatsby"
@@ -49,7 +59,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
